Exported graphics from figma

--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@
                     </a>
                 </li>
             </ul>
+            <span class="copyright">
+                Design by
+                <a class="copyright-link">.html academy</a>
+            </span>
+            
             
         </section>
     </footer>
