Added graphics in css and HTML

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogue</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <body>
@@ -12,7 +13,7 @@
         <nav class="navigation">
             <ul class="navigation-list">
                 <a class="navigation-logo" href="/">
-                    <img class="page-header-logo" src="" alt="Logo of Barbershop Borodinski">
+                    <img class="page-header-logo" src="img/logo-short-light-white.svg" width="140" height="18" alt="Logo of Barbershop Borodinski">
                 </a>
                 <li class="navigation-item">
                     <a class="navigation-link" href="#">About Us</a>
@@ -142,7 +143,7 @@
             <ul class="product-cards-list">
                 <li class="product-card">
                     <a class="product-card-link" href="#">
-                        <img class="product-card-img" src="" alt="">
+                        <img class="product-card-img" src="img/products/product-2.jpg" width="220" height="200" alt="Syos Shampoo Men Power & Strength">
                         <h3 class="product-card-title">Syos Shampoo Men Power & Strength</h3>
                     </a>
                     <b class="product-card-price"> 13.3$</b>
@@ -150,7 +151,15 @@
                 </li>
                 <li class="product-card">
                     <a class="product-card-link" href="#">
-                        <img class="product-card-img" src="" alt="">
+                        <img class="product-card-img" src="img/products/product-3.jpg" width="220" height="200" alt="Schauma Shampoo Men - 'Caress your hair'">
+                        <h3 class="product-card-title">Schauma Shampoo Men - "Caress your hair"</h3>
+                    </a>
+                    <b class="product-card-price"> 26.5$</b>
+                    <a class="product-card-button button" href="#">Order</a>
+                </li>
+                <li class="product-card">
+                    <a class="product-card-link" href="#">
+                        <img class="product-card-img" src="img/products/product-1.jpg" width="220" height="200" alt="Shampoo For Men Brews Daily">
                         <h3 class="product-card-title">Shampoo For Men Brews Daily</h3>
                     </a>
                     <b class="product-card-price"> 16.2$</b>
@@ -158,7 +167,7 @@
                 </li>
                 <li class="product-card">
                     <a class="product-card-link" href="#">
-                        <img class="product-card-img" src="" alt="">
+                        <img class="product-card-img" src="img/products/product-4.jpg" width="220" height="200" alt="Nivea Men Shampoo with mentol extract">
                         <h3 class="product-card-title">Nivea Men Shampoo with mentol extract</h3>
                     </a>
                     <b class="product-card-price"> 24.00$</b>
@@ -166,7 +175,7 @@
                 </li>
                 <li class="product-card">
                     <a class="product-card-link" href="#">
-                        <img class="product-card-img" src="" alt="">
+                        <img class="product-card-img" src="img/products/product-5.jpg" width="220" height="200" alt="Shampoo Amplifier & Thickening">
                         <h3 class="product-card-title">Shampoo Amplifier & Thickening</h3>
                     </a>
                     <b class="product-card-price"> 16.5$</b>
@@ -174,7 +183,7 @@
                 </li>
                 <li class="product-card">
                     <a class="product-card-link" href="#">
-                        <img class="product-card-img" src="" alt="">
+                        <img class="product-card-img" src="img/products/product-6.jpg" width="220" height="200" alt="American Crew Shampoo Anti-Dundruff">
                         <h3 class="product-card-title">American Crew Shampoo Anti-Dundruff</h3>
                     </a>
                     <b class="product-card-price">22$</b>
@@ -226,7 +235,7 @@
     <footer class="page-footer">
         <section class="footer-contacts">
             <h2 class="visually-hidden">Contacts</h2>
-            <img class="footer-logo" src="" alt="Logo of Barbershop">
+            <img class="footer-logo" src="img/logo-short-light.svg" width="140" height="18" alt="Logo of Barbershop">
             <address class="footer-contacts-address">
                 <p class="footer-about-text">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
                 <a class="footer-contacts-address-phone" href="tel:+995999360365">Телефон: +7 (812) 666-02-66</a>
