--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <body>
@@ -42,7 +43,7 @@
 
     <main class="page-index">
         <h1 class="visually-hidden">Barbershop "Borodinski"</h1>
-        <img class="logo" src="" alt="Logo of Barbershop Borodinski">
+        <img class="logo" src="img/logo-full-white.svg" width="361" height="152" alt="Logo of Barbershop Borodinski">
         <section class="features">
             <h2 class="visually-hidden"> Features</h2>
             <ul class="features-list">
@@ -84,7 +85,7 @@
         </section>
         <section class="gallery">
             <h2>Gallery</h2>
-            <img class="slider-image" src="img/studio.jpg" width="100" height="100">
+            <img class="slider-image" src="img/products/gallery-1.jpg" width="390" height="250">
             <button class="slider-button slider-prev" type="button">
                 <span class="visually-hidden">Previous</span>
             </button>
@@ -162,7 +163,7 @@
     <footer class="page-footer">
         <section class="footer-contacts">
             <h2 class="visually-hidden">Contacts</h2>
-            <img class="footer-logo" src="" alt="Logo of Barbershop">
+            <img class="footer-logo" src="img/logo-short-light.svg" width="140" height="18" alt="Logo of Barbershop">
             <address class="footer-contacts-address">
                 <p class="footer-about-text">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
                 <a class="footer-contacts-address-phone" href="tel:+995999360365">Телефон: +7 (812) 666-02-66</a>
