--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
     </header>
 
-    <main class="page-index">
+    <main class="main-index">
         <h1 class="visually-hidden">Barbershop "Borodinski"</h1>
         <img class="logo" src="img/logo-full-white.svg" width="361" height="152" alt="Logo of Barbershop Borodinski">
         <section class="features">
@@ -61,62 +61,63 @@
                 </li>
             </ul>
         </section>
-        <section class="services">
-            <h2 class="services-title">Services</h2>
-            <ul class="services-list">
-                <li class="services-item">
-                    <span class="service-name">Cutting hair</span>
-                    <b class="services-price">10$</b>
-                </li>
-                <li class="services-item">
-                    <span class="service-name">Shave Head</span>
-                    <b class="services-price">15$</b>
-                </li>
-                <li class="services-item">
-                    <span class="service-name">Fix Mustache</span>
-                    <b class="services-price">20$</b>
-                </li>
-                <li class="services-item">
-                    <span class="service-name">Coloring of hair</span>
-                    <b class="services-price">40$</b>
-                </li>
-            </ul>
-            <a class="button button-all" href="#">See All</a>
-        </section>
-        <section class="gallery">
-            <h2>Gallery</h2>
-            <img class="slider-image" src="img/products/gallery-1.jpg" width="390" height="250">
-            <button class="slider-button slider-prev" type="button">
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="slider-button slider-next" type="button">
-                <span class="visually-hidden">Next</span>
-            </button>
+        <div class="column-group">
+            <section class="services">
+                <h2 class="services-title">Services</h2>
+                <ul class="services-list">
+                    <li class="services-item">
+                        <span class="service-name">Cutting hair</span>
+                        <b class="services-price">10$</b>
+                    </li>
+                    <li class="services-item">
+                        <span class="service-name">Shave Head</span>
+                        <b class="services-price">15$</b>
+                    </li>
+                    <li class="services-item">
+                        <span class="service-name">Fix Mustache</span>
+                        <b class="services-price">20$</b>
+                    </li>
+                    <li class="services-item">
+                        <span class="service-name">Coloring of hair</span>
+                        <b class="services-price">40$</b>
+                    </li>
+                </ul>
+                <a class="button button-all" href="#">See All</a>
+            </section>
+            <section class="gallery">
+                <h2>Gallery</h2>
+                <img class="slider-image" src="img/products/gallery-1.jpg" width="390" height="250">
+                <button class="slider-button slider-prev" type="button">
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="slider-button slider-next" type="button">
+                    <span class="visually-hidden">Next</span>
+                </button>
 
-            <ol class="slider-pagination">
-                <li class="slider-pagination-item">
-                    <button class="slider-pagination-button" type="button">
-                        <span class="visually-hidden">1 Photo</span>
-                    </button>
-                </li>
-                <li class="slider-pagination-item">
-                    <button class="slider-pagination-button" type="button">
-                        <span class="visually-hidden">2 Photo</span>
-                    </button>
-                </li>
-                <li class="slider-pagination-item">
-                    <button class="slider-pagination-button" type="button">
-                        <span class="visually-hidden">3 Photo</span>
-                    </button>
-                </li>
-                <li class="slider-pagination-item">
-                    <button class="slider-pagination-button" type="button">
-                        <span class="visually-hidden">4 Photo</span>
-                    </button>
-                </li>
-            </ol>
-        </section>
-
+                <ol class="slider-pagination">
+                    <li class="slider-pagination-item">
+                        <button class="slider-pagination-button" type="button">
+                            <span class="visually-hidden">1 Photo</span>
+                        </button>
+                    </li>
+                    <li class="slider-pagination-item">
+                        <button class="slider-pagination-button" type="button">
+                            <span class="visually-hidden">2 Photo</span>
+                        </button>
+                    </li>
+                    <li class="slider-pagination-item">
+                        <button class="slider-pagination-button" type="button">
+                            <span class="visually-hidden">3 Photo</span>
+                        </button>
+                    </li>
+                    <li class="slider-pagination-item">
+                        <button class="slider-pagination-button" type="button">
+                            <span class="visually-hidden">4 Photo</span>
+                        </button>
+                    </li>
+                </ol>
+            </section>
+        </div>
 
         <section class="contacts">
             <h2 class="contacts-title">Contacts</h2>
@@ -166,7 +167,9 @@
             <img class="footer-logo" src="img/logo-short-light.svg" width="140" height="18" alt="Logo of Barbershop">
             <address class="footer-contacts-address">
                 <p class="footer-about-text">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
-                <a class="footer-contacts-address-phone" href="tel:+995999360365">Телефон: +7 (812) 666-02-66</a>
+                <a class="footer-contacts-phone" href="tel:+995999360365">Телефон: +7 (812) 666-02-66</a>
+                <a class="footer-contacts-phone" href="tel:+995999360365">How to find us?</a>
+                
             </address>
             <a class="footer-contacts-map-link" href="#"></a>
         </section>
@@ -181,7 +184,7 @@
             </form>
         </section>
         <section class="footer-social">
-            <h2 class="footer-title">Follow us</h2>
+            <h2 class="page-footer-title">Follow us</h2>
             <ul class="footer-social-list">
                 <li class="footer-social-item">
                     <a class="button" href="#">
