Created flexboxes for minor elements

--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
 
-    <main class="main-inner">
+    <main class="main-inner main-container">
         <div class="page-container">
             <header class="inner-header">
                 <h1 class="inner-header-title">Catalog</h1>
@@ -146,17 +146,17 @@
                                 Sort Products
                             </button>
                         </form> 
-                            <a href="#" class="button button-light">
+                            <button href="#" class="button button-light">
                                 <span class="visually-hidden">Show as Listing</span>
-                            </a>
-                            <a href="#" class="button">
+                            </button>
+                            <button href="#" class="button">
                                 <span class="visually-hidden">Show as Cards</span>
-                            </a>
+                            </button>
                 
                     </div>
 
                     <!-- CATALOG PRODUCTS -->
-                    <ul class="product-cards-list">
+                    <ul class="product-card-list">
                         <li class="product-card">
                             <a class="product-card-link" href="#">
                                 <img class="product-card-img" src="img/products/product-2.jpg" width="220" height="200" alt="Syos Shampoo Men Power & Strength">
@@ -209,44 +209,44 @@
 
                     <!-- PAGINATION -->
                     <div class="pagination">
-                        <ul class="pagination-list">
-                            <li class="pagination-item">
-                                <a class="pagination-link pagination-prev pagination-disabled">
-                                    <span class="visually-hidden">Previous Page</span>
-                                </a>
-                            </li>
-                            <li class="pagination-item">
-                                <a class="pagination-link pagination-current">
-                                    <span class="visually-hidden">1</span>
-                                </a>
-                            </li>
-                            <li class="pagination-item">
-                                <a class="pagination-link" href="#">
-                                    <span class="visually-hidden">2</span>
-                                </a>
-                            </li>
-                            <li class="pagination-item">
-                                <a class="pagination-link" href="#">
-                                    <span class="visually-hidden">3</span>
-                                </a>
-                            </li>
-                            <li class="pagination-item">
-                                <a class="pagination-link" href="#">
-                                    <span class="visually-hidden">4</span>
-                                </a>
-                            </li>
-                            <li class="pagination-item">
-                                <a class="pagination-link" href="#">
-                                    <span class="visually-hidden">5</span>
-                                </a>
-                            </li>
-                            <li class="pagination-item">
-                                <a class="pagination-link pagination-next" href="#">
-                                    <span class="visually-hidden">Next Page</span>
-                                </a>
-                            </li>
-                        </ul>
-                        <button class="button pagination-show-more" type="button">Show more</button>
+                            <ul class="pagination-list">
+                                <li class="pagination-item">
+                                    <a class="pagination-link pagination-prev pagination-disabled">
+                                        <span class="visually-hidden">Previous Page</span>
+                                    </a>
+                                </li>
+                                <li class="pagination-item">
+                                    <a class="pagination-link pagination-current">
+                                        1
+                                    </a>
+                                </li>
+                                <li class="pagination-item">
+                                    <a class="pagination-link" href="#">
+                                        2
+                                    </a>
+                                </li>
+                                <li class="pagination-item">
+                                    <a class="pagination-link" href="#">
+                                        3
+                                    </a>
+                                </li>
+                                <li class="pagination-item">
+                                    <a class="pagination-link" href="#">
+                                        4
+                                    </a>
+                                </li>
+                                <li class="pagination-item">
+                                    <a class="pagination-link" href="#">
+                                        5
+                                    </a>
+                                </li>
+                                <li class="pagination-item">
+                                    <a class="pagination-link pagination-next" href="#">
+                                        <span class="visually-hidden">Next Page</span>
+                                    </a>
+                                </li>
+                            </ul>
+                            <button class="button pagination-show-more" type="button">Show more</button>
                     </div>
                 </div>
             </section>
