Added grid system for contact form and products

--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@
                     <h2 class="appointment-title">Appointment</h2>
                     <p class="appointment-description">Please choose desired date and time after which we will call you and confirm your your request.</p>
                     <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
-                        <p class="appointment-form-date">
+                        <p class="field-group appointment-form-date">
                             <label for="appointment-date">Date</label>
                             <input type="text" id="appointment-date" name="appointment-date" placeholder="12.08.2022">
                         </p>
-                        <p class="appointment-form-time">
+                        <p class="field-group appointment-form-time">
                             <label for="appointment-time">Time</label>
                             <input type="text" id="appointment-time" name="appointment-time" placeholder="10:00">
                         </p>
-                        <p class="appointment-form-phone">
+                        <p class="field-group appointment-form-phone">
                             <label for="appointment-phone">Phone</label>
                             <input type="text" name="appointment-phone" placeholder="+995 555 555 555">
                         </p>
-                        <p class="appointment-form-name">
+                        <p class="field-group appointment-form-name">
                             <label for="appointment-name">Name</label>
                             <input type="text" name="appointment-name" placeholder="John Doe">
                         </p>
