--- a/catalog.html
+++ b/catalog.html
@@ -158,48 +158,60 @@
                     <!-- CATALOG PRODUCTS -->
                     <ul class="product-card-list">
                         <li class="product-card">
-                            <a class="product-card-link" href="#">
+                            <a class="product-card-img-link" href="#">
                                 <img class="product-card-img" src="img/products/product-2.jpg" width="220" height="200" alt="Syos Shampoo Men Power & Strength">
+                            </a>
+                            <a class="product-card-title-link" href="#">
                                 <h3 class="product-card-title">Syos Shampoo Men Power & Strength</h3>
                             </a>
                             <b class="product-card-price"> 13.3$</b>
                             <a class="product-card-button button" href="#">Order</a>
                         </li>
                         <li class="product-card">
-                            <a class="product-card-link" href="#">
+                            <a class="product-card-img-link" href="#">
                                 <img class="product-card-img" src="img/products/product-3.jpg" width="220" height="200" alt="Schauma Shampoo Men - 'Caress your hair'">
+                            </a>
+                            <a class="product-card-title-link" href="#">
                                 <h3 class="product-card-title">Schauma Shampoo Men - "Caress your hair"</h3>
                             </a>
                             <b class="product-card-price"> 26.5$</b>
                             <a class="product-card-button button" href="#">Order</a>
                         </li>
                         <li class="product-card">
-                            <a class="product-card-link" href="#">
+                            <a class="product-card-img-link" href="#">
                                 <img class="product-card-img" src="img/products/product-1.jpg" width="220" height="200" alt="Shampoo For Men Brews Daily">
+                            </a>
+                            <a class="product-card-title-link" href="#">
                                 <h3 class="product-card-title">Shampoo For Men Brews Daily</h3>
                             </a>
                             <b class="product-card-price"> 16.2$</b>
                             <a class="product-card-button button" href="#">Order</a>
                         </li>
                         <li class="product-card">
-                            <a class="product-card-link" href="#">
+                            <a class="product-card-img-link" href="#">
                                 <img class="product-card-img" src="img/products/product-4.jpg" width="220" height="200" alt="Nivea Men Shampoo with mentol extract">
+                            </a>
+                            <a class="product-card-title-link" href="#">
                                 <h3 class="product-card-title">Nivea Men Shampoo with mentol extract</h3>
                             </a>
                             <b class="product-card-price"> 24.00$</b>
                             <a class="product-card-button button" href="#">Order</a>
                         </li>
                         <li class="product-card">
-                            <a class="product-card-link" href="#">
+                            <a class="product-card-img-link" href="#">
                                 <img class="product-card-img" src="img/products/product-5.jpg" width="220" height="200" alt="Shampoo Amplifier & Thickening">
+                            </a>
+                            <a class="product-card-title-link" href="#">
                                 <h3 class="product-card-title">Shampoo Amplifier & Thickening</h3>
                             </a>
                             <b class="product-card-price"> 16.5$</b>
                             <a class="product-card-button button" href="#">Order</a>
                         </li>
                         <li class="product-card">
-                            <a class="product-card-link" href="#">
+                            <a class="product-card-img-link" href="#">
                                 <img class="product-card-img" src="img/products/product-6.jpg" width="220" height="200" alt="American Crew Shampoo Anti-Dundruff">
+                            </a>
+                            <a class="product-card-title-link" href="#">
                                 <h3 class="product-card-title">American Crew Shampoo Anti-Dundruff</h3>
                             </a>
                             <b class="product-card-price">22$</b>
