--- a/index.html
+++ b/index.html
@@ -22,20 +22,51 @@
             <ul class="navigation-list navigation-user">
                 <li class="navigation-item">
                     <a class="navigation-link" href="#">
+
+                        <svg class="navigation-icon" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16"  fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#a)">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 6.5a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0Zm-.67 5.25a6.5 6.5 0 1 1 1.41-1.41l3.97 3.95-1.42 1.42-3.96-3.96Z"/></g>
+                            <defs>
+                                <clipPath id="a">
+                                <path fill="#fff" d="M0 0h16v16H0z"/>
+                            </clipPath>
+                            </defs>
+                        </svg>
                         <span class="visually-hidden">
                             Search
                         </span>
                     </a>
                 </li>
+                
                 <li class="navigation-item">
                     <a class="navigation-link" href="#">
+                        <svg class="navigation-icon" aria-hidden="true" focusable="false"  width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#a)">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M3.1 6 3.57.9l.08-.9h8.67l.1.9.48 5.1H15.63l-.14 1.12-1 8-.1.88H1.61l-.11-.88-1-8L.37 6H3.1Zm2 0h5.8l-.38-4H5.48L5.1 6Zm-1.72 8-.75-6h10.74l-.75 6H3.38ZM8.5 9.5v3h2v-3h-2Zm-3 3v-3h2v3h-2Z" />
+                            </g>
+                                <defs>
+                                    <clipPath id="a"><path fill="#fff" d="M0 0h16v16H0z"/></clipPath>
+                                </defs>
+                        </svg>
                         <span class="visually-hidden">
                             Cart
                         </span>
                     </a>
                 </li>
                 <li class="navigation-item">
-                    <a class="navigation-link" href="#">Login</a>
+                    <a class="navigation-link navigation-link-login" href="#">
+                        <svg class="navigation-icon" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#a)">
+                              <path fill-rule="evenodd" clip-rule="evenodd" d="M9 2h5v12H9v2h7V0H9v2ZM4.3 3.7l3.24 3.25H0v2h7.54l-3.25 3.24 1.42 1.42 4.95-4.95.7-.71-.7-.7L5.7 2.28 4.29 3.71Z" />
+                            </g>
+                            <defs>
+                              <clipPath id="a">
+                                <path  d="M0 0h16v16H0z"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                        Login
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -182,7 +213,7 @@
             <section class="footer-newsletter">
                 <h2 class="page-footer-title">Get the best offer</h2>
                 <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-                    <label for="newsletter-email">Email</label>
+                    <label class="visually-hidden" for="newsletter-email">Email</label>
                     <input class="field" type="email" name="newsletter-email" placeholder="info@domain.com" id="newsletter-email" required>
                     <button class="button newsletter-button" type="submit">
                         <span class="visually-hidden">Send</span>
@@ -194,17 +225,17 @@
                 <h2 class="page-footer-title">Follow us</h2>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
-                        <a class="button" href="#">
-                            <span class="visually-hidden">Facebook</span>
+                        <a class="footer-social-link footer-social-vk" href="#">
+                            <span class="visually-hidden">Vkontakte</span>
                         </a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="button" href="#">
+                        <a class="footer-social-link footer-social-ig" href="#">
                             <span class="visually-hidden">Instagram</span>
                         </a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="button" href="#">
+                        <a class="footer-social-link  footer-social-tw" href="#">
                             <span class="visually-hidden">Twitter</span>
                         </a>
                     </li>
