Stylization of decorative elements on the page

--- a/catalog.html
+++ b/catalog.html
@@ -231,7 +231,7 @@
                             <a class="product-card-img-link" href="#">
                                 <img class="product-card-img" src="img/products/product-6.jpg" width="220" height="200" alt="American Crew Shampoo Anti-Dundruff">
                             </a>
-                                <a class="product-card-link" href="#">
+                                <a class="product-card-title-link" href="#">
                                 <h3 class="product-card-title">American Crew Shampoo Anti-Dundruff</h3>
                             </a>
                             <b class="product-card-price">22$</b>
