--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header class="page-header">
         <nav class="navigation">
             <ul class="navigation-list">
-                <li class="navigation-item"><a class="navigation-link" href="#">Information</a></li>
+                <li class="navigation-item">
+                    <a class="navigation-link  navigation-link-current" href="#">Information</a>
+                </li>
                 <li class="navigation-item"><a class="navigation-link" href="#">News</a></li>
                 <li class="navigation-item"><a class="navigation-link" href="#">Price List</a></li>
                 <li class="navigation-item"><a class="navigation-link" href="#">Store</a></li>
@@ -101,19 +103,19 @@
                     <h2 class="services-title">Services</h2>
                     <ul class="services-list">
                         <li class="services-item">
-                            <span class="service-name">Cutting hair</span>
+                            <span class="services-name">Cutting hair</span>
                             <b class="services-price">10$</b>
                         </li>
                         <li class="services-item">
-                            <span class="service-name">Shave Head</span>
+                            <span class="services-name">Shave Head</span>
                             <b class="services-price">15$</b>
                         </li>
                         <li class="services-item">
-                            <span class="service-name">Fix Mustache</span>
+                            <span class="services-name">Fix Mustache</span>
                             <b class="services-price">20$</b>
                         </li>
                         <li class="services-item">
-                            <span class="service-name">Coloring of hair</span>
+                            <span class="services-name">Coloring of hair</span>
                             <b class="services-price">40$</b>
                         </li>
                     </ul>
@@ -162,12 +164,16 @@
                         <a class="contacts-phone" href="tel:+995999360365">Телефон: +7 (812) 666-02-66</a>
                     </address>
                     <h3 class="contacts-subtitle">Время работы:</h3>
-                        <ul class="contacts-schedule">
-                            <li class="contact-schedule-item">пн—пт: с 10:00 до 22:00</li>
-                            <li class="contact-schedule-item">сб—вс: с 10:00 до 19:00</li>
-                    </h3>
-                    <a class="button" href="map.html">Как проехать</a>
-                    <a class="button" href="contacts.html">Обратная связь</a>
+                    <ul class="contacts-schedule">
+                        <li class="contact-schedule-item">пн—пт: с 10:00 до 22:00</li>
+                        <li class="contact-schedule-item">сб—вс: с 10:00 до 19:00</li>
+                    </ul>
+                    <div class="contacts-navigation">
+                        <a class="button" href="map.html">
+                            Как проехать
+                        </a>
+                        <a class="button button-light" href="contacts.html">Обратная связь</a>
+                    </div>
                 </section>
 
                 <section class="appointment">
@@ -204,11 +210,11 @@
                 <img class="footer-logo" src="img/logo-short-light.svg" width="140" height="18" alt="Logo of Barbershop">
                 <address class="footer-contacts-address">
                     <p class="footer-about-text">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
-                    <a class="footer-contacts-phone" href="tel:+995999360365">Телефон: +7 (812) 666-02-66</a>
-                    <a class="footer-contacts-phone" href="tel:+995999360365">How to find us?</a>
-                    
+                    <a class="footer-contacts-phone" href="tel:+995999360365">+7 800 555-86-28</a>
                 </address>
-                <a class="footer-contacts-map-link" href="#"></a>
+                <a class="footer-contacts-map-link" href="#">
+                    How to find us?
+                </a>
             </section>
             <section class="footer-newsletter">
                 <h2 class="page-footer-title">Get the best offer</h2>
